# consoleRPG

./: CMakeLists.txt  README.md  Untitled Diagram.drawio  main.cpp
heder/: character.hpp  player.h  warrior.h
scr/: player.cpp  warrior.cpp
